2009-05-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client\BreakpointStore.cs: Use case
	  insensitive compare for files on windows.

	* Mono.Debugging.Client\DebuggerSession.cs: Fix crash when
	  updating breakpoints.

2009-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client\DebuggerSession.cs: Protect access to
	  the breakpoints collection. Added method for notifying
	  loading/unloading of files.

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/IDebuggerEngine.cs: Moved
	  IDebuggerEngine to MD.Debugger.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/IDebuggerEngine.cs: Removed unused
	  CanDebugPlatform and rename CanDebugFile to CanDebugCommand.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.mdp:
	* Mono.Debugging.csproj: Migrated to MSBuild file format.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.mdp: Flush project format changes.

2009-01-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Remove Console.WriteLine noise.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.mdp:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Backend/UpdateCallback.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs:
	* Mono.Debugging.Backend/IObjectValueUpdater.cs:
	* Mono.Debugging.Backend/IObjectValueUpdateCallback.cs: Added support
	for asynchronus evaluation of expressions, with support for timeouts.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Client/IDebuggerEngine.cs:
	* Mono.Debugging.Client/DebuggerFeatures.cs: Improved support for
	checking debugger features.

2008-12-02  Lluis Sanchez Gual  <lluis@novell.com>
