@@ -1,3 +1,9 @@
+2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Client/DebuggerSession.cs:
+	* Mono.Debugging.Backend/IDebuggerSessionFrontend.cs: Added
+	  NotifySourceFile(Un)Loaded to IDebuggerSessionFrontend.
+
 2009-05-25  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Client\BreakpointStore.cs: Use case
